# proj2

./: AStarSearcher.cpp  AStarSearcher.h  BFSSearcher.h  BestFirstSearcher.cpp  BestFirstSearcher.h  CMakeLists.txt  CompareCost.h  DFSSearcher.h  FileCacheManager.cpp  FileCacheManager.h  ICacheManager.h  IClientHandler.h  ISearchable.h  ISearcher.h  IServer.h  IServer_Side.h  ISolver.h  MyMatrixProblem.cpp  MyMatrixProblem.h  MyMatrixSearchable.cpp  MyMatrixSearchable.h  MyParallelServer.cpp  MyParallelServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  PriorityBasedSearcher.h  QueueBasedSearcher.h  README.md  SearchableMatrixFactory.cpp  SearchableMatrixFactory.h  SearcherSolver.h  StackBasedSearcher.h  State.h  TCPServer.cpp  TCPServer.h  details.txt  log.txt  main.cpp
